<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ocn.mstudyandroidlib.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/test_dialog_bt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/test_dialog_lib" />

            <Button
                android:id="@+id/test_loading_image_lib_bt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/test_loading_image_lib" />

            <ImageView
                android:scaleType="fitXY"
                android:id="@+id/test_image_bt"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center" />

            <Button
                android:id="@+id/test_ui_state_change_bt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/test_ui_state_change_bt" />

            <Button
                android:id="@+id/test_permission_bt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/test_permission_bt" />
            <Button
                android:id="@+id/test_loading_dialog_bt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/test_loading_dialog_bt" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>
